mesg.yml: add 'location' sid

--- a/mesg.yml
+++ b/mesg.yml
@@ -1,4 +1,5 @@
 name: location
+sid: location
 description: find locations of ip addresses
 repository: https://github.com/ilgooz/service-location
 tasks:
